Fix reverse dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -101,7 +101,7 @@
 
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: darks) {
   /*
    * Dark Colors
    * -------------------------------------------
